syntax = "proto3";

option objc_class_prefix = "SNZ";

package snoozer;

// messages

message Null {
}

message AuthUrl {
  string url = 1;
}

message Event {
  string id = 1;
  string name = 2;
  string start = 3;
  string end = 4;
  bool allDay = 5;
}

message Events {
  repeated Event events = 1;
}

message SwipeRequest {
  string eventId = 1;
}

message SwipeResponse {
  Event event = 1;
}

// API definition

service Snoozer {
  rpc AuthToGoogleCalendar (Null) returns (AuthUrl) {}
  rpc ListEvents (Null) returns (Events) {}
  rpc SwipeEvent (SwipeRequest) returns (SwipeResponse) {}
}
